# metabase_forms_summary_automation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
metabase_forms_summary_automation/: card_creation.py  credentials-example.py  forms_summary.py  main.py  utils.py
tests/: test_metabase_forms_summary_automation.py
