[tool.poetry]
name = "metabase-forms-summary-automation"
version = "0.1.0"
description = ""
authors = ["THIVEND <baptiste.thivend@protonmail.com>"]
readme = "README.md"
packages = [{include = "metabase_forms_summary_automation"}]

[tool.poetry.dependencies]
python = "^3.8"
metabase-api = "^0.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
