[tool.poetry]
name = "metabase-forms-summary-automation"
version = "0.1.0"
description = ""
authors = ["THIVEND <baptiste.thivend@protonmail.com>"]
readme = "README.md"
packages = [{include = "metabase_forms_summary_automation"}]

[tool.poetry.dependencies]
python = "^3.8"
metabase-api = "^0.2.15"
pandas = "^1.5.1"

[tool.poetry.scripts]
make_summary = "metabase_forms_summary_automation.main:make_summary"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
